--- a/style.css
+++ b/style.css
@@ -71,6 +71,21 @@ a:hover {
   opacity: 0.3;
 }
 
+.button{
+  color: #E7D7C2;
+  background-color:#A88FAC;
+  margin: 10px;
+  margin-top: 50px;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: -3px 6px 28px 20px rgba(198,169,203,0.92);
+  text-decoration: none;
+}
+
+.button:hover {
+  opacity: 0.7;
+}
+
 @media screen and (max-width: 960px) {
   .container {
     width: 700px;
